corrected autocomplete-using-chosen-in-rails page

--- a/source/_posts/2014-01-01-autocomplete-using-chosen-in-rails.html
+++ b/source/_posts/2014-01-01-autocomplete-using-chosen-in-rails.html
@@ -51,7 +51,7 @@ Then, include Chosen stylesheet assets to your css file.
 {%codeblock%}
 *= require chosen
 {%endcodeblock%}
-To include more details check <a href='http://harvesthq.github.io/chosen/'>Here <a/>
+To include more details check <a href='http://harvesthq.github.io/chosen/'>Here </a>
 <br/>
 Thats it, you will have a nice autocomplte with multiselect . Happy coding…
 <br/><br/>
