--- a/source/_posts/2013-09-01-kannel-installation-and-configuration.html
+++ b/source/_posts/2013-09-01-kannel-installation-and-configuration.html
@@ -68,7 +68,7 @@ dest-addr-npi = 1
 system-type = ""
 address-range = "" 
 {% endcodeblock %}
-  Now start smsbox and bearerbox using 
+  Now start SMS box and bearer box using 
 {% codeblock %}
   sudo /usr/local/kannel-1.5.0/sbin/bearerbox /home/shaiju/kannel/kannel.conf
 sudo /usr/local/kannel-1.5.0/sbin/smsbox /home/shaiju/kannel/kannel.conf
