--- a/source/_posts/2014-03-05-fullcalendar-integration-with-ruby-on.html
+++ b/source/_posts/2014-03-05-fullcalendar-integration-with-ruby-on.html
@@ -15,7 +15,7 @@ categories:
   <br/>
 <img border="0" src="http://1.bp.blogspot.com/-qa_L3JuaqW4/UvxSTF0KUgI/AAAAAAAAAUw/7kbq7plSXAU/s1600/calender.png" height="426" width="640" />
 <br/>
-Step 1 : Download the JQuery fullcalendar plugin by <a href="http://arshaw.com/fullcalendar/download/">here</a> and add fullcalender.js and fullcalender.css in to javascripts and stylesheets folder.Fullcalendar is also available as a gem for Ruby on Rails which fits well with Asset Pipeline.
+Step 1 : Download the JQuery fullcalendar plugin by <a href="http://arshaw.com/fullcalendar/download/">here</a> and add fullcalender.js and fullcalender.css into javascripts and stylesheets folder.Fullcalendar is also available as a gem for Ruby on Rails which fits well with Asset Pipeline.
 {%codeblock%}
 gem 'fullcalendar-rails'
 {%endcodeblock%}
@@ -66,7 +66,7 @@ DemoApp::Application.routes.draw do
 end
 {%endcodeblock%}
 
-that's it , now you can see calender in your dashboard
+that's it, now you can see the calendar in your dashboard
 <br/>
 
 </div></div>
