--- a/source/_posts/2013-10-03-kannel-monitoring-tool-ruby-gem.html
+++ b/source/_posts/2013-10-03-kannel-monitoring-tool-ruby-gem.html
@@ -11,7 +11,7 @@ categories:
 
 <div class='post'>
 <div dir="ltr" style="text-align: left;" trbidi="on">
-  <div>Last few months I have been facing lots of issues in kannel SMS gateway.Some time sms are getting queued up, in some other time smsc went to reconnecting stage. I searched for a tool which will monitor kannel status Unfortunately i didn't find a tool to monitor and give alert. so decided to write a tool which will monitor kannel activities.</div>
+  <div>Last few months I have been facing lots of issues in Kannel SMS gateway.Some time sms are getting queued up, in some other time smsc went to the reconnecting stage. I searched for a tool which will monitor Kannel status unfortunately I didn't find a tool to monitor and give an alert. so decided to write a tool which will monitor Kannel activities.</div>
   {% codeblock %}
     kannel_monitor 0.0.2
   {% endcodeblock %}
