--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical" href="http://tech.eshaiju.in/about">
+  <link rel="canonical" href="https://tech.eshaiju.com/about">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/atom.xml" rel="alternate" title="Rails Kitchen" type="application/atom+xml">
@@ -107,7 +107,7 @@
       
         <div class="sharing">
   
-  <a href="//twitter.com/share" class="twitter-share-button" data-url="http://tech.eshaiju.in/about/index.html" data-via="" data-counturl="http://tech.eshaiju.in/about/index.html" >Tweet</a>
+  <a href="//twitter.com/share" class="twitter-share-button" data-url="https://tech.eshaiju.com/about/index.html" data-via="" data-counturl="https://tech.eshaiju.com/about/index.html" >Tweet</a>
   
   
   <div class="g-plusone" data-size="medium"></div>
